# luau-interop

./: CMakeLists.txt  README.md  cframe.hpp  cframe_lua.cpp  cframe_lua.hpp  instance.hpp  instance_class.hpp  instance_lua.cpp  instance_lua.hpp  main.cpp  script_env.cpp  script_env.hpp  script_signal.cpp  script_signal.hpp  test.lua  test_module.lua  test_signal.lua  vector3_lua.cpp  vector3_lua.hpp
cmake/: GeneratorHelpers.cmake
codegen/types/: cframe.json  script_connection.json  script_signal.json  vector3.json
src/: CMakeLists.txt  cframe.hpp  cframe_lua.cpp  cframe_lua.hpp  instance.cpp  instance.hpp  main.cpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  script_env.cpp  script_env.hpp  script_fwd.hpp  script_signal.cpp  script_signal.hpp  string_hash.hpp  type_tags.hpp  vector3.hpp  vector3_lua.cpp  vector3_lua.hpp  vector4.hpp
tools/: codegen.py  gen_lua_bindings.py
